[package]
name = "moleculec-go"
version = "0.1.2"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2018"
description = "Compiler plugin for moleculec."
repository = "https://github.com/driftluo/moleculec-go"
keywords = ["molecule", "code-generation", "serialization"]
categories = [
    "parser-implementations",
    "development-tools",
    "encoding",
    "data-structures"
]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule-codegen = { version = "0.6.0", features = ["compiler-plugin"] }
clap = { version = "2.33", features = ["yaml"] }
case = "1.0"

[badges]
maintenance = { status = "experimental" }

[workspace]
members = [
  "test/test-codegen",
]
