[package]
name = "test-codegen"
version = "0.1.0"
authors = ["driftluo <driftluo@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
molecule-codegen = { version = "0.7.5" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
case = "1.0"
